--- a/todo/templates/product-dashboard.html
+++ b/todo/templates/product-dashboard.html
@@ -33,6 +33,32 @@
         </form>
     </div>
 
+    <div class="col-md-4 mt-5">
+        <h4>Filter by Category</h4>
+        <hr>
+        <p><a href="/pdashboard">All</a></p>
+        <p><a href="/filter/elec">By Electronics</a></p>
+        <p><a href="/filter/cloth">By Clothing</a></p>
+        <p><a href="/filter/book">By Books</a></p>
+
+    </div>
+    <div class="col-md-4 mt-5">
+        <h4>Filter by Price</h4>
+        <hr>
+        <p><a href="/pdashboard">All</a></p>
+        <p><a href="/pfilter/>10000">Above 10000</a></p>
+        <p><a href="/pfilter/<10000">Below 10000</a></p>
+
+    </div>
+    <div class="col-md-4 mt-5">
+        <h4>Sort By</h4>
+        <hr>
+        <p><a href="/pdashboard">All</a></p>
+        <p><a href="/sort/ltoh">Low to high</a></p>
+        <p><a href="/sort/htol">High to low</a></p>
+
+    </div>
+
     <div class="col-md-5 mt-5">
         <table class="table table-hover">
             <thead>
