--- a/todo/templates/product-dashboard.html
+++ b/todo/templates/product-dashboard.html
@@ -1,6 +1,11 @@
 {% extends 'base.html' %}
 {% block data %}
+
 <div class="container">
+    <div class="col-md-12" style="text-align: center;">
+        <h4>Admin panel to add products</h4>
+        <hr>
+    </div>
     <div class="col-md-3 mt-5">
         <h1>Product details</h1>
         <hr>
