--- a/todo/templates/product-dashboard.html
+++ b/todo/templates/product-dashboard.html
@@ -63,6 +63,20 @@
         <p><a href="/sort/htol">High to low</a></p>
 
     </div>
+    <div class="col-md-12">
+        <form action="/filtrange" method="post">
+            {% csrf_token %}
+        <table>
+            <tr>
+                <td>From Rs:</td>
+                <td><input type="number" name="from" class="form-control" required></td>
+                <td> To Rs: </td>
+                <td><input type="number" name="to" class="form-control" required></td>
+                <td><input class="btn btn-success" type="submit" value="Filter"></td>
+            </tr>
+        </table>
+    </form>
+    </div>
 
     <div class="col-md-5 mt-5">
         <table class="table table-hover">
